tests/read_only_set/read_only_set.exp
Error ---------------------------------------------------------------------------------------------------- test.js:16:35

Cannot use `T` [1] in an output position because `T` [1] is expected to occur only in input positions.
[incompatible-variance]

   test.js:16:35
   16|     bad (x: number) : ReadonlySet<T> {// Error: T in invariant position
                                         ^

References:
   test.js:15:14
   15| class Baz<in T> {
                    ^ [1]



Found 1 error
